--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.10.2",
+    "clsx": "^2.1.1",
     "mongodb": "^6.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
