--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mantine/hooks": "7.11.1",
     "@tabler/icons-react": "^3.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
